--- a/assets/css/tasks.css
+++ b/assets/css/tasks.css
@@ -81,8 +81,9 @@
 /* Search */
 .pit-tasks-page .pit-search-wrapper {
     position: relative;
-    flex: 1;
+    flex: 1 1 300px;
     min-width: 200px;
+    max-width: 400px;
 }
 .pit-tasks-page .pit-search-icon {
     position: absolute;
